Lançamento de pequenas correções após finalização da aplicação vanilla